<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">사원증 찾기</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_widget">WidgetActivity</string>
    <string name="help">이 앱은 블루투스 기능이 켜져 있을 때 정상적으로 동작합니다.\n\n</string>
    <string name="service">버튼을 \'ON\'하면 기능이 동작 합니다.\n\n</string>
    <string name="reregistration">\'사원증 재등록\'을 누르면 사원증을 다시 등록할 수 있습니다.\n</string>
    <string name="map">\'마지막 위치 보기\'를 누르면 핸드폰과 사원증이 마지막으로 통신한 위치를 지도로 보여드립니다.\n\n</string>
    <string name="gear">설정 버튼을 누르고 \n</string>
    <string name="str_done">완료</string>

</resources>