<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpMsg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:padding="2dp"
            android:text="@string/help"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingBottom="2dp"
                android:paddingRight="5dp"
                android:src="@drawable/main_service_on" />
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingBottom="2dp"
                android:src="@drawable/main_service_off" />
        </LinearLayout>
        
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:padding="2dp"
            android:text="@string/service"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal" />
        
         <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:paddingBottom="2dp"
                android:paddingRight="5dp"
                android:src="@drawable/main_setting_btn"/>
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:padding="2dp"
            android:text="@string/gear"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:padding="2dp"
            android:text="@string/reregistration"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:padding="2dp"
            android:text="@string/map"
            android:textColor="#000000"
            android:textSize="15sp"
            android:typeface="normal" />
    </LinearLayout>

</ScrollView>